--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,8 @@
 name: Docker Image CI
 
+env:
+  imageName: portainer.local:5000/github-runner:$(date +%s)
+
 on:
   push:
     branches: [ "main" ]
@@ -15,4 +18,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag ${{env.imageName}}
+    - name: Push the Docker image
+      run: docker image push ${{env.imageName}}
