--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,7 @@
 name: Docker Image CI
 
 env:
-  imageName: portainer.local:5000/github-runner:$(date +%s)
+  imageName: localhost:5000/github-runner:$(date +%s)
 
 on:
   push:
