--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: [self-hosted, linux, x64]
     env:
-      imageName: localhost:5000/github-runner:${{date +%s}}
+      imageName: localhost:5000/github-runner:$(date +%s)
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
