--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{env.imageName}}
+      run: docker build . --file Dockerfile --tag $(env.imageName)
     - name: Push the Docker image
       run: docker image push ${{env.imageName}}
